I changed the style on the forms and errors so they wouldn't be so distorted by errors. Also I fixed a mistake I made in the openID methods

--- a/public/stylesheets/mystyle.css
+++ b/public/stylesheets/mystyle.css
@@ -44,6 +44,8 @@
   padding-left: 3cm;
   padding-top: 10px;
   margin-top: 2px;
+  width: 470px;
+  height: 28px;
   background-color: #666666;
   color: white;
   display: block;
@@ -56,7 +58,7 @@
   padding: 0;
   line-height: 2px;
   margin-bottom: 2px;
-  margin-top: 6px; }
+  margin-top: 2px; }
 #myheader #UCLOGO {
   display: inline;
   width: 2cm;
@@ -178,6 +180,31 @@ a:hover {
 .user_form {
   position: relative;
   height: 1.5cm; }
+  .user_form .fieldWithErrors {
+    display: inline;
+    padding: 1px;
+    color: red; }
+  .user_form .form_left {
+    position: absolute;
+    left: 1cm; }
+  .user_form .form_right {
+    position: relative;
+    left: 8cm;
+    width: 6cm; }
+  .user_form #user_session_openid_identifier, .user_form #user_openid_identifier {
+    background: url(http://openid.net/images/login-bg.gif) no-repeat;
+    background-color: #FFF;
+    color: #000;
+    background-position: 0 50%;
+    padding-left: 18px; }
+  .user_form #user_color {
+    color: #000;
+    background-position: 0 50%;
+    width: 500px; }
+  .user_form h2 {
+    font-size: 14pt; }
+  .user_form .tiny {
+    font-size: 8pt; }
 
 .user_form_description {
   position: relative;
